# kaggle-mnist

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
data/: .gitignore
reports/: .gitignore
src/: data.py
src/models/: __init__.py  baseline.py  utils.py
src/stages/: download_data.py  evaluate.py  predict.py  save_images.py  split_data.py  train.py  unzip_data.py
src/train/: __init__.py  trainer.py  utils.py
src/transforms/: __init__.py  common.py  test.py  train.py
