[project]
name = "mnist-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.67.1",
    "ipykernel>=7.3.0",
    "kaggle>=2.2.1",
    "numpy>=2.4.6",
    "pillow>=12.2.0",
    "python-dotenv>=1.2.2",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
]
